# qzeitgeist

./: CMakeLists.txt  README.md
demos/: CMakeLists.txt
demos/browser/: CMakeLists.txt  main.cpp  zgbrowser.cpp  zgbrowser.h  zgbrowser.ui  zgbrowser_ui.h
demos/simple-list/: CMakeLists.txt  main.cpp  simplelist.cpp  simplelist.h
doc/: Doxyfile.cmake.in
include/QZeitgeist/: DataSource  DataSourceRegistry  Index  MimeType  QZeitgeist  ResultSet
scripts/: coding_style.sh  cppcheck.sh  run-tests.sh
src/: CMakeLists.txt  event.cpp  event.h  log.cpp  log.h  mimetype.cpp  mimetype.h  monitor.cpp  monitor.h  qzeitgeist.h  qzeitgeist_defines.h  resultset.cpp  resultset.h  subject.cpp  subject.h  symbol.cpp  symbol.h  timerange.cpp  timerange.h  timerange_p.h  tools.cpp  tools.h
src/extensions/: datasource.cpp  datasource.h  datasourceregistry.cpp  datasourceregistry.h  index.cpp  index.h
tests/: CMakeLists.txt
tests/event/: CMakeLists.txt  test-event.cpp  test-event.h
tests/index/: CMakeLists.txt  test-index.cpp  test-index.h
tests/log/: CMakeLists.txt  test-log.cpp  test-log.h
tests/mimetypes/: CMakeLists.txt  test-mimetypes.cpp  test-mimetypes.h
tests/symbols/: CMakeLists.txt  test-symbols.cpp  test-symbols.h
tests/timerange/: CMakeLists.txt  test-timerange.cpp  test-timerange.h
